cryptsetup (2:1.4.0-1~mejo2) mejo-unstable; urgency=low

  * NOT RELEASED YET
  * new upstream release (1.4.0)
    - fixes typo in german translation. (closes: #645528)
    - remove patches, all incorporated upstream.
  * check for busybox in initramfs cryptroot hook, and install the sed binary
    in case it's either not installed or not activated. (closes: #591853)
  * add checks for 'type $KEYSCRIPT' to initscripts cryptdisks.functions, and
    to cryptroot initramfs script/hook. this adds support for keyscripts inside
    $PATH. thanks to Ian Jackson for the suggestion. (closes: #597583)
  * use argument '--sysinit' for vgchange in cryptroot initramfs script. Thanks
    to Christoph Anton Mitterer for the suggestion.
  * incorporate changes to package descriptions and debconf templates that
    suggested by debian-l10n-english people. Special thanks go to Justin B Rye.
  * add a warning about using decrypt_derived keyscript for devices with
    persistent data. Thanks to Arno Wagner for pointing this out.
  * remove quotes from resume device candidates at get_resume_devs() in
    initramfs hook script. Thanks to Johannes Rohr. (closes: #634017)
  * support custom $TABFILE, thanks to Douglas Huff. (closes: #638317)
  * add debconf translations:
    - french, thanks to Julien Patriarca. (closes: #633105)
    - italian, thanks to Milo Casagrande.
    - swedish, thanks to Martin Bagge. (closes: #640056, #642470)
    - vietnamese, thanks to TRẦN Duy Hùng. (closes: #641719)
    - portuguese, thanks to Portuguese Translation Team. (closes: #641839)
    - russian, thanks to Yuri Kozlov. (closes: #641947)
    - german, thanks to Erik Pfannenstein. (closes: #642147)
    - czech, thanks to Michal Simunek. (closes: #642540)
    - dutch, thanks to Jeroen Schot. (closes: #643633)
    - spanish, thanks to Camaleón. (closes: #643962)
    - danish, thanks to Joe Dalton. (closes: #644853)
  * set architecture to linux-any, depends on linux kernel anyway. Thanks to