@@ -1,5 +1,5 @@
-Format-Specification: http://svn.debian.org/wsvn/dep/web/deps/dep5.mdwn?op=file
-Maintainer: Milan Broz <mbroz@redhat.com>
+Format: http://svn.debian.org/wsvn/dep/web/deps/dep5.mdwn?op=file
+Upstream-Contact: Milan Broz <mbroz@redhat.com>
 Source: http://code.google.com/p/cryptsetup
 
 Files: debian/askpass.c, debian/passdev.c
