@@ -1,2 +1,2 @@
 libcryptsetup.so.1 libcryptsetup1 #MINVER#
- *@CRYPTSETUP_1.0 2:1.3
+ *@CRYPTSETUP_1.0 2:1.4
